# CTscintillators

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTSci.cc  GNUmakefile  README.md  pos.mac  scan_long.mac  scan_short.mac  test.mac  vis.mac
analysis/: plot.C  results.sh  run_analysis.C
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  MagneticField.hh  MagneticField.hh.global  MagneticField.hh.local  PhysicsList.hh  PhysicsList.hh.ByHand  PrimaryGeneratorAction.hh  RunAction.hh  SciHit.hh  SciSD.hh  StackingAction.hh  SwanseaMagField.hh  TAlphaPrimaryGenerator.hh
src/: DetectorConstruction.cc  DetectorConstruction.cc.CheckOverlapFailed  DetectorMessenger.cc  EventAction.cc  MagneticField.cc  MagneticField.cc.global  MagneticField.cc.local  PhysicsList.cc  PhysicsList.cc.ByHand  PrimaryGeneratorAction.cc  RunAction.cc  RunAction.cc.save  SciHit.cc  SciSD.cc  StackingAction.cc  SwanseaMagField.cc  TAlphaPrimaryGenerator.cc
